--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.14)
-project(NetSim)
+project(SimNet)
 
 set(CMAKE_CXX_STANDARD 14)
 
@@ -10,5 +10,5 @@ include_directories(include)
 set(SOURCE_FILES
         src/package.cpp)
 
-add_executable(NetSim ${SOURCE_FILES} main.cpp)
+add_executable(SimNet ${SOURCE_FILES} main.cpp)
 
