--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ add_compile_options(-Wall -Wextra -Werror -Wpedantic -pedantic-errors)
 include_directories(include)
 
 set(SOURCE_FILES
-        src/package.cpp)
+        src/Package.cpp src/PackageQueue.cpp)
 
 add_executable(SimNet ${SOURCE_FILES} main.cpp)
 
