--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,12 @@ add_executable(SimNet_debug ${SOURCE_FILES} main.cpp)
 
 set(SOURCES_FILES_TESTS
         test/googletest.cpp
+        test/test_Factory.cpp
+        test/test_factory_io.cpp
+        test/test_nodes.cpp
+        test/test_package.cpp
+        test/test_simulate.cpp
+        test/test_storage_types.cpp
         )
 
 add_executable(SimNet_test ${SOURCE_FILES} ${SOURCES_FILES_TESTS} test/main_gtest.cpp)
