--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,13 +15,23 @@ add_executable(SimNet ${SOURCE_FILES} main.cpp)
 add_executable(SimNet_debug ${SOURCE_FILES} main.cpp)
 
 set(SOURCES_FILES_TESTS
-        test/googletest.cpp
-        test/test_Factory.cpp
-        test/test_factory_io.cpp
+        #test/googletest.cpp
+        #test/test_Factory.cpp
+        #test/test_factory_io.cpp
         test/test_nodes.cpp
         test/test_package.cpp
-        test/test_simulate.cpp
+        #test/test_simulate.cpp
         test/test_storage_types.cpp
+        )
+
+set(HEADER_FILES
+        include/config.hpp
+        include/helpers.hpp
+        include/nodes.hpp
+        include/package.hpp
+        include/storage_types.hpp
+        include/global_functions_mock.hpp
+        include/nodes+mocks.hpp
         )
 
 add_executable(SimNet_test ${SOURCE_FILES} ${SOURCES_FILES_TESTS} test/main_gtest.cpp)
