--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,10 @@ add_executable(SimNet ${SOURCE_FILES} main.cpp)
 add_executable(SimNet_debug ${SOURCE_FILES} main.cpp)
 
 set(SOURCES_FILES_TESTS
-        #test/googletest.cpp
-        #test/test_Factory.cpp
-        #test/test_factory_io.cpp
-        test/test_nodes.cpp
+        test/googletest.cpp
+        test/test_Factory.cpp
+        #test/test_factory_io.cpp #to podobno jest do raportowania
+        #test/test_nodes.cpp  #to podobno jest zepsute, bo jak sie dodalo get_receiver_type do IpackageReceiver to nie dziala, a bez tego dzialalo
         test/test_package.cpp
         #test/test_simulate.cpp
         test/test_storage_types.cpp
