--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ add_compile_options(-Wall -Wextra -Werror -Wpedantic -pedantic-errors)
 include_directories(include)
 
 set(SOURCE_FILES
-        src/package.cpp src/storage_types.cpp src/nodes.cpp src/helpers.cpp src/factory.cpp)
+        src/package.cpp src/storage_types.cpp src/nodes.cpp src/helpers.cpp src/factory.cpp src/simulation.cpp)
 
 add_executable(SimNet ${SOURCE_FILES} main.cpp)
 
@@ -20,7 +20,7 @@ set(SOURCES_FILES_TESTS
         #test/test_factory_io.cpp #to podobno jest do raportowania
         #test/test_nodes.cpp  #to podobno jest zepsute, bo jak sie dodalo get_receiver_type do IpackageReceiver to nie dziala, a bez tego dzialalo
         test/test_package.cpp
-        #test/test_simulate.cpp
+        test/test_simulate.cpp
         test/test_storage_types.cpp
         )
 
@@ -33,6 +33,7 @@ set(HEADER_FILES
         include/global_functions_mock.hpp
         include/nodes+mocks.hpp
         include/factory.hpp
+        include/simulation.hpp
         )
 
 add_executable(SimNet_test ${SOURCE_FILES} ${SOURCES_FILES_TESTS} test/main_gtest.cpp)
